# JdeRobot

./: CMakeLists.txt  README.md
branches/5.0/: configure.in
branches/5.0/debian/: control  rules
branches/5.0/doc/: jderobot.dox
branches/5.0/m4/: bgfgfilters.m4  bgfgsegmentation.m4  colorspacesmm.m4  component_alarmgenerator.m4  component_bgfgview.m4  component_calibrator.m4  component_cameraserver.m4  component_cameraview.m4  component_cameraview_icestorm.m4  component_gazeboserver.m4  component_introrob.m4  component_motiondetection.m4  component_opencvdemo.m4  component_recorder.m4  component_recordingserver.m4  component_surveillance.m4  component_teleoperator.m4  component_varcolorserver.m4  component_varcolorviewgtkmm.m4  gearbox.m4  ice.m4  jderobotice.m4  jderobotutil.m4  lib1394.m4  libgazebo.m4  libgearbox.m4  libgstreamer.m4  libgtkmm.m4  libice.m4  libopencv.m4  libplayer.m4  libxforms.m4  opencv.m4
branches/5.0/src/components/alarmgenerator/: Makefile.am
branches/5.0/src/components/bgfgview/: Makefile.am  bgfgview.cfg  bgfgview.glade  bgmodelfactory.cpp  bgmodelfactory.h  controller.cpp  controller.h  main.cpp  mainthread.cpp  mainthread.h  model.cpp  model.h  viewgtk.cpp  viewgtk.h
branches/5.0/src/components/calibrator/: Makefile.am  calibrator.cfg  calibrator.cpp  calibratorgui.cpp  calibratorgui.fd  calibratorgui.h  controller.cpp  libcalibrator.cpp  libcalibrator.h  view.cpp
branches/5.0/src/components/calibrator/config-example/: cam-in
branches/5.0/src/components/cameraserver/: Makefile.am  cameraserver.cfg  cameraserver.cpp  gstpipeline.cpp  gstpipeline.h
branches/5.0/src/components/cameraview/: Makefile.am  cameraview.cpp  viewer.cpp
branches/5.0/src/components/cameraview_icestorm/: Makefile.am  viewer.cpp
branches/5.0/src/components/gazeboserver/: Makefile.am  gazeboserver.cfg  gazeboserver.cpp
branches/5.0/src/components/introrob/: Makefile.am  controller.cpp  drawarea.cpp  introrob.cfg  introrob.cpp  introrob.glade  introrobgui.cpp  introrobgui.glade  introrobgui.h  navega.cpp  navega.h  view.cpp  view.h
branches/5.0/src/components/motiondetection/: Makefile.am  controller.cpp  controller.h  main.cpp  model.cpp  model.h  motiondetection.cfg  motiondetection.cpp  motiondetection.glade  motiondetection.h  view.cpp  view.h
branches/5.0/src/components/motiondetection/test/: testalgorithms.cpp
branches/5.0/src/components/opencvdemo/: Makefile.am
branches/5.0/src/components/recorder/: GenericRecorder.cpp  GenericRecorder.h  Makefile.am  deviceRecorder.cpp  deviceRecorder.h  ffmpegRecorder.cpp  ffmpegRecorder.h  imageRecorder.cpp  recorder.cfg  recorder.cpp  recorder_client.cpp
branches/5.0/src/components/recordingserver/: Makefile.am  recordingserver.cfg  recordingserver.cpp
branches/5.0/src/components/recordingserver/libRecordingLog/: RecordingLog.cpp  RecordingLog.h
branches/5.0/src/components/recordingserver/libRecordingLog/files/: jderobot_bbdd.mysql
branches/5.0/src/components/surveillance/: Makefile.am  surveillance.cfg  surveillance.cpp
branches/5.0/src/interfaces/cpp/jderobot/: Makefile.am
branches/5.0/src/libs/bgfgfilters/: Makefile.am  bgfg_codebook.cpp  bgfg_common.cpp  bgfg_exp.cpp  bgfg_mean.cpp  bgfg_mode.cpp  bgfgfilters.h  bgstats.R
branches/5.0/src/libs/colorspaces/: Makefile.am  color.c  color.h  colorspaces++.h  colorspaces.h  colorspacesmm.h  formats++.cpp  formats++.h  formats.c  formats.h  image++.cpp  image++.h  image.c  image.h  imagecv.cpp  imagecv.h  imagetest.c  imagetest.h
branches/5.0/src/libs/colorspaces/test/: Makefile.am  test1.cpp
branches/5.0/src/libs/jderobotice/: Makefile.am  application.cpp  catchutils.cpp  component.cpp  component.h  interfaceconnect.h  jderobotice.h  subsystemthread.cpp  subsystemthread.h
cmake/cpack_metainfo/: drivers.cmake
jde+/trunk/: Makefile.am  Makefile.in  TODO  config.h  config.h.in  configure  configure.in  semantic.cache
jde+/trunk/docs/: Makefile.in  doxygen.conf.in
jde+/trunk/include/: Makefile.in  jde+.h  semantic.cache
jde+/trunk/include/jde+/: Makefile.am  Makefile.in  classfactory.h  hierarchy.h  isc.h  message_processor.h  messageprocessor.h  pointer.h  privatedata.h  schemafactory.h  schemaimplementation.h  schemainstance.h  schemainterface.h  schemastate.h  semantic.cache  singleton.h
jde+/trunk/src/: Makefile.am  Makefile.in  hierarchy.cpp  jde+.glade.bak  jdescope.glade.old  loader.h  message.cpp  schemafactory.cpp  schemaimplementation.cpp  schemainstance.cpp  schemastate.cpp  semantic.cache
jde+/trunk/src/tests/: a.out  semantic.cache  test_condition  test_pointer  test_read_write_mutex  test_scoped_lock
jdec/branches/4.4/interfaces/: Makefile.am  encoders.c  encoders.h  interface.c  interface.h  laser.c  laser.h  motors.c  motors.h
jdec/branches/4.4/interfaces/swig/: Makefile.am  encoders.i  interface.i  laser.i  motors.i
jdec/branches/5.0/: configure.in
jdec/branches/5.0/base/: jdec.c  sA.c  schema.c  schema.h  sfactory.c
jdec/branches/5.0/components/varcolorserver/: Makefile.am  gstpipeline.cpp  varcolorserver.cpp
jdec/branches/5.0/components/varcolorviewgtkmm/: Makefile.am  varcolorviewgtkmm.cpp  viewer.cpp  viewer.h
jdec/branches/5.0/examples/jdec_interfaces/: loader.c  loader.h  loader.i  sA.c  sApy.py  sD.py  schema.c  schema.h  schema.i
jdec/branches/5.0/interfaces/slice/jderobot/: varcolor.ice
jdec/branches/5.0/libs/colorspaces/: formats.c  formats.h
src/drivers/cameraserverROS/: CMakeLists.txt
src/libs/joystick_cpp/: CMakeLists.txt  test
src/stable/components/RosIceGazebo/: CMakeLists.txt
src/stable/components/RosPCL/: CMakeLists.txt
src/stable/components/rgbdManualCalibrator/: CMakeLists.txt  controller.cpp  drawarea.cpp  rgbdManualCalibrator.cpp  view.cpp
src/stable/libs/visionlib/colorspaces/: CMakeLists.txt  colorspaces.h  colorspacesmm.h  imagecv.cpp
src/stable/tools/: CMakeLists.txt
src/stable/tools/visualHFSM/gui/: funvar.glade
src/tools/colorTuner_py/: CMakeLists.txt  colorTuner.py
src/tools/colorTuner_py/gui/: controlWidget.py  logoWidget.py
(+321 files in other folders)
