dnl #############################################################
dnl #
dnl #  For information about autoconf, see:
dnl #
dnl #  http://www.gnu.org/software/autoconf/
dnl #
dnl #
dnl #############################################################


dnl ########################################
dnl #
dnl # Autoconf and automake initialization
dnl #
dnl ########################################
AC_INIT([jderobot],[5.0])
AC_CONFIG_AUX_DIR([config])
dnl#init automake
AM_INIT_AUTOMAKE
dnl#config pkg-config
PKG_PROG_PKG_CONFIG

AC_PROG_LIBTOOL
AC_SUBST([LIBTOOL_DEPS])

dnl#init dirs
libdir='${exec_prefix}/lib/jderobot'
includedir='${prefix}/include/jderobot'

AC_SUBST([driverdir],['${libdir}/drivers'])
AC_SUBST([schemadir],['${libdir}/schemas'])
AC_SUBST([servicedir],['${libdir}/services'])
AC_SUBST([swigdir],['${libdir}/swig'])
AC_SUBST([confdir],['${pkgdatadir}/conf'])
AC_SUBST([gladedir],['${pkgdatadir}/glade'])

dnl ########################################
dnl #
dnl # command line options and precious variables
dnl #
dnl ########################################
dnl##### switches to enable/disable features

dnl##### precious variables
dnl # Allow user to define variables
AC_ARG_VAR([FDESIGN],[command used to build xforms guis])
AC_ARG_VAR([DOXYGEN],[command used to generate code documentation])
AC_ARG_VAR([LATEX],[tex compiler command])
AC_ARG_VAR([PDFLATEX],[pdf generator command])
AC_ARG_VAR([DVIPS],[dvi to ps conversion command])
AC_ARG_VAR([BIBTEX],[latex bibliography generator command])
AC_ARG_VAR([SWIG],[command use to build swig files])


dnl ########################################
dnl #
dnl # compiler options
dnl #
dnl ########################################
dnl # set compiler flags
dnl # check gcc
AC_PROG_CC_C99

AC_PROG_CXX

dnl # check stdc headers
AC_HEADER_STDC

dnl ########################################
dnl #
dnl # core headers and libraries check
dnl #
dnl ########################################
dnl # check m
AC_CHECK_HEADERS([math.h])
AC_CHECK_LIB([m],[floor],
    [],
    AC_MSG_ERROR([m library not found]))

dnl#AC_ARG_VAR([PYTHON_VERSION],[Python interpreter version])
dnl#AC_PYTHON_DEVEL
dnl#AC_PROG_SWIG
dnl#SWIG_PYTHON

dnl ########################################
dnl #
dnl # external software check
dnl #
dnl ########################################


dnl ########################################
dnl #
dnl # libs checks
dnl #
dnl ########################################


dnl ########################################
dnl #
dnl # examples generators check
dnl #
dnl ########################################


dnl ########################################
dnl #
dnl # Generate output, main and core makefiles
dnl #
dnl ########################################
AC_CONFIG_FILES([Makefile])
dnl#AC_CONFIG_FILES([base/Makefile \
dnl#    base/swig/Makefile])
dnl # generate utils Makefiles
AC_CONFIG_FILES([libs/Makefile \
    libs/colorspaces/Makefile \
    libs/fuzzylib/Makefile \
    libs/pioneer/Makefile \
    libs/progeo/Makefile \
    libs/simclist/Makefile])

AC_OUTPUT
