AUTOMAKE_OPTIONS = no-dependencies
MAINTAINERCLEANFILES = Makefile.in

#cabeceras usadas para compilar, pero que no se instalaran
noinst_HEADERS = isc.h loader.h singleton.h \
		schemastate.h util.h conditionallock.h

jdexincludedir = $(includedir)/jde+
jdexinclude_HEADERS = hierarchy.h data.h schemainterface.h schemaimplementation.h \
                        schematypes.h classfactory.h schemafactory.h \
                        schemainstance.h message.h message_processor.h \
			pointer.h privatedata.h
