AUTOMAKE_OPTIONS = no-dependencies
MAINTAINERCLEANFILES = Makefile.in

#cabeceras usadas para compilar, pero que no se instalaran
noinst_HEADERS = isc.h schemastate.h

jdexincludedir = $(includedir)/jde+
jdexinclude_HEADERS = hierarchy.h data.h schemainterface.h schemaimplementation.h \
                        schematypes.h schemafactory.h \
                        schemainstance.h message.h messageprocessor.h \
			pointer.h singleton.h privatedata.h
